; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/ec/extr_ecdsa_i31_vrfy_asn1.c_br_ecdsa_i31_vrfy_asn1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/ec/extr_ecdsa_i31_vrfy_asn1.c_br_ecdsa_i31_vrfy_asn1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FIELD_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @br_ecdsa_i31_vrfy_asn1(i32* %0, i8* %1, i64 %2, i32* %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i8* %4, i8** %12, align 8
  store i64 %5, i64* %13, align 8
  %17 = load i32, i32* @FIELD_LEN, align 4
  %18 = shl i32 %17, 2
  %19 = add nsw i32 %18, 24
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %14, align 8
  %22 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %15, align 8
  %23 = load i64, i64* %13, align 8
  %24 = lshr i64 %20, 1
  %25 = icmp ugt i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  store i32 1, i32* %16, align 4
  br label %39

27:                                               ; preds = %6
  %28 = load i8*, i8** %12, align 8
  %29 = load i64, i64* %13, align 8
  %30 = call i32 @memcpy(i8* %22, i8* %28, i64 %29)
  %31 = load i64, i64* %13, align 8
  %32 = call i64 @br_ecdsa_asn1_to_raw(i8* %22, i64 %31)
  store i64 %32, i64* %13, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = load i64, i64* %10, align 8
  %36 = load i32*, i32** %11, align 8
  %37 = load i64, i64* %13, align 8
  %38 = call i32 @br_ecdsa_i31_vrfy_raw(i32* %33, i8* %34, i64 %35, i32* %36, i8* %22, i64 %37)
  store i32 %38, i32* %7, align 4
  store i32 1, i32* %16, align 4
  br label %39

39:                                               ; preds = %27, %26
  %40 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #2

declare dso_local i64 @br_ecdsa_asn1_to_raw(i8*, i64) #2

declare dso_local i32 @br_ecdsa_i31_vrfy_raw(i32*, i8*, i64, i32*, i8*, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
